@@ -1,3 +1,8 @@
+2003-06-27  Dominique Devriese  <devriese@kde.org>
+
+	* make shift snap to grid in moving mode, and rework the moving
+	API to something a bit saner in the process..
+
 2003-06-25  Dominique Devriese  <devriese@kde.org>
 
 	* add undo support for various view actions like zoom in, zoom
